# radio_db

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  alembic.ini  config.yml  docker-compose.yml  entrypoint  issues.md  pyproject.toml  readme.md  renovate.json
.github/workflows/: build.yml  build_image.yml
radio_db/: __main__.py  config.py  db.py  m3u8.py  manage.py  monitor.py  playlists.py  stations.py  stream.py
radio_db/admin/: app.py  stations.py
radio_db/admin/ui/: package-lock.json  package.json  tailwind.config.cjs
radio_db/admin/ui/src/: client.ts
radio_db/admin/ui/src/routes/: __layout.svelte  index.svelte  stations.svelte
radio_db/admin/ui/src/routes/stations/: [id].svelte
radio_db/migrations/: blank.sql  env.py
radio_db/migrations/versions/: 4066a299242c_0_2_0.py  75b4e522c28a_0_2_0.py
typings/inquirer/: __init__.pyi  prompt.pyi  questions.pyi  shortcuts.pyi  themes.pyi
typings/inquirer/render/: __init__.pyi
typings/inquirer/render/console/: __init__.pyi  _checkbox.pyi  _list.pyi  _path.pyi  _text.pyi  base.pyi
