[tool.poetry]
name = "radio_db"
version = "0.3.52"
description = ""
authors = ["Jono Hill <jono@hillnz.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.7.4"
"ruamel.yaml" = "^0.17.4"
SQLAlchemy = "^1.4.13"
aiosqlite = "^0.17.0"
pydantic = "^1.8.1"
asyncpg = "^0.27.0"
spotipy = "^2.18.0"
python-dotenv = "^0.21.0"
typer = "^0.7.0"
alembic = "^1.6.3"
typing-extensions = "^4.0.1"
inquirer = "^3.0.0"

[tool.poetry.dev-dependencies]
pylint = "^2.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
