[tool.poetry]
name = "radio_db"
version = "0.3.28"
description = ""
authors = ["Jono Hill <jono@hillnz.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.7.4"
"ruamel.yaml" = "^0.17.4"
SQLAlchemy = "^1.4.13"
aiosqlite = "^0.17.0"
pydantic = "^1.8.1"
asyncpg = "^0.25.0"
spotipy = "^2.18.0"
python-dotenv = "^0.19.0"
typer = "^0.4.0"
alembic = "^1.6.3"
typing-extensions = "^4.0.1"
inquirer = "^2.9.1"
fastapi = "^0.74.1"
hypercorn = "^0.13.2"
greenlet = "^1.1.2"

[tool.poetry.dev-dependencies]
pylint = "^2.8.2"
autopep8 = "^1.6.0"
sqlalchemy2-stubs = "^0.0.2-alpha.20"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
