[tool.poetry]
name = "radio_db"
version = "0.3.60"
description = ""
authors = ["Jono Hill <jono@hillnz.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.7.4"
"ruamel.yaml" = "^0.18.0"
SQLAlchemy = "^2.0.0"
aiosqlite = "^0.21.0"
pydantic = "^2.0.0"
asyncpg = "^0.30.0"
spotipy = "^2.18.0"
python-dotenv = "^1.0.0"
typer = "^0.15.0"
alembic = "^1.6.3"
typing-extensions = "^4.0.1"
inquirer = "^3.0.0"
sqlalchemy-cockroachdb = "^2.0.0"
psycopg2 = "^2.9.5"

[tool.poetry.dev-dependencies]
pylint = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
